frees merges modifications from its groups
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>